# advent-of-code-2023

./: .gitignore  README.md  advent-of-code-2022.cabal  advent-of-code-2023.cabal  advent-of.code-workspace
app/AoC/: Main.hs
src/AoC/: Puzzle.hs
src/Day01/: Trebuchet.hs
src/Day02/: CubeConundrum.hs
test/Day01/: TrebuchetSpec.hs
test/Day02/: CubeConundrumSpec.hs
